Fix overflow issues

--- a/src/components/Layout/Header/Header.scss
+++ b/src/components/Layout/Header/Header.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0.5em;
     left: 1em;
-    width: 100%;
+    width: 95%;
     z-index: 10;
 }
 
