--- a/src/components/Layout/Main/Main.scss
+++ b/src/components/Layout/Main/Main.scss
@@ -7,7 +7,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     justify-content: space-between;
     
 
